Finalized initial design & structure

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	    <link rel="apple-touch-icon" href="assets/images/identity/icon_touch.png">
 		<link href="assets/styles/reset.css" type="text/css" rel="stylesheet" />
 		<link href="assets/styles/style.css" type="text/css" rel="stylesheet" />
+		<script src="assets/scripts/script.js"></script>
 	</head>
 	<body>
 		<nav>
@@ -44,12 +45,13 @@
 			<div class="container">
 				<img class="hero" src="assets/images/illustrations/network.png" />
 				<h1>Make any website social</h1>
-				<h2>with just a couple lines of code.</h2>
+				<p>with just a couple lines of code.</p>
 			</div>
 		</header>
 		<main>
 			<div class="container">
-				<code class="main">
+				<section class="introduction">
+					<code class="major">
 <!-- Code begins -->
 <xmp><script src="pho.js"></script>
 <script>
@@ -57,9 +59,10 @@
 	Pho.init("16D58CF2-FD88-4A49-972B-6F60054B");
 </script></xmp>
 <!-- Code ends -->
-				</code>
-				<button>Copy to Start</button>
-				<section>
+					</code>
+					<button>Copy to Start</button>
+				</section>
+				<section class="information">
 					<div class="preview">
 						<img src="assets/images/content/sample.png" />
 					</div>
@@ -76,7 +79,7 @@
 						</code>
 					</div>
 				</section>
-				<section>
+				<section class="information">
 					<div class="code">
 						<h3>
 							Create groups and
@@ -98,7 +101,7 @@
 						<img src="assets/images/content/sample.png" />
 					</div>
 				</section>
-				<section>
+				<section class="information">
 					<div class="preview">
 						<img src="assets/images/content/sample.png" />
 					</div>
@@ -113,7 +116,7 @@
 						</code>
 					</div>
 				</section>
-				<section>
+				<section class="information">
 					<div class="code">
 						<h3>
 							Easily create profiles.
@@ -135,8 +138,66 @@
 						<img src="assets/images/content/sample.png" />
 					</div>
 				</section>
+				<section>
+					<h2>and even more...</h2>
+					<code class="major tabbed">
+						<div id="tabs" class="options">
+							<a onclick="setActiveTab(1)" class="active">Newsfeed</a>
+							<a onclick="setActiveTab(2)">Groups</a>
+							<a onclick="setActiveTab(3)">Messages</a>
+							<a onclick="setActiveTab(4)">Robust APIs</a>
+						</div>
+						<div id="views">
+<!-- Code begins -->
+<xmp class="active"><script src="pho.js"></script>
+<script>
+	//Initiate with your ID
+	Pho.init("26D58CF2-FD88-4A49-972B-6F60054B");
+</script></xmp>
+<xmp><script src="pho.js"></script>
+<script>
+	//Initiate with your ID
+	Pho.init("36D58CF2-FD88-4A49-972B-6F60054B");
+</script></xmp>
+<xmp><script src="pho.js"></script>
+<script>
+	//Initiate with your ID
+	Pho.init("46D58CF2-FD88-4A49-972B-6F60054B");
+</script></xmp>
+<xmp><script src="pho.js"></script>
+<script>
+	//Initiate with your ID
+	Pho.init("56D58CF2-FD88-4A49-972B-6F60054B");
+</script></xmp>
+<!-- Code ends -->
+						</div>
+					</code>
+				</section>
 			</div>
 		</main>
+		<section class="promotion">
+			<h2>Join our private beta!</h2>
+			<p>Leave your email to be a beta tester.</p>
+			<form>
+				<input type="text" placeholder="Your email address">
+			</form>
+		</section>
+		<section class="indication">
+			<div class="container">
+				<div class="brand">
+					<img class="logo" src="assets/images/identity/logo.svg">
+					<p>is proudly open source.</p>
+				</div>
+				<div class="note">
+					<img class="logo" src="assets/images/external/opensource-logo.svg">
+					<p>
+						Built on top of the robust Gaza Framework.
+						<br />
+						Feel free to export content and host it on your servers!
+					</p>
+				</div>
+			</div>
+		</section>
 		<footer>
 			<div class="container">
 				built with love by GROU.PS Inc.
