--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 		<link href="assets/styles/reset.css" type="text/css" rel="stylesheet" />
 		<link href="assets/styles/style.css" type="text/css" rel="stylesheet" />
 		<script src="assets/scripts/script.js"></script>
+		<link rel="stylesheet" href="assets/styles/highlight.css">
+		<script src="assets/scripts/highlight.js"></script>
+		<script>hljs.initHighlightingOnLoad();</script>
 	</head>
 	<body>
 		<nav>
@@ -51,15 +54,24 @@
 		<main>
 			<div class="container">
 				<section class="introduction">
+					<!--
 					<code class="major">
-<!-- Code begins -->
+
 <xmp><script src="pho.js"></script>
 <script>
 	//Initiate with your ID
 	Pho.init("16D58CF2-FD88-4A49-972B-6F60054B");
 </script></xmp>
-<!-- Code ends -->
+
 					</code>
+					-->
+					<pre>
+						<code class="html">
+							<div>
+								<p>Is it working?</p>
+							</div>
+						</code>
+					</pre>
 					<button>Copy to Start</button>
 				</section>
 				<section class="information">
@@ -81,10 +93,10 @@
 						<code>
 <!-- Code begins -->
 <xmp>//Login Box
-<graphjs-auth default="login">
+<graphjs-auth default="login" />
 
 //Authentication State
-<graphjs-state></xmp>
+<graphjs-state /></xmp>
 <!-- Code ends -->
 						</code>
 					</div>
@@ -148,7 +160,6 @@
 						<div class="slider" data-simple-slider>
 							<img src="assets/images/content/comments_introduction.png" />
 							<img src="assets/images/content/comments_inline.png" />
-							<img src="assets/images/content/comments_standalone.png" />
 						</div>
 					</div>
 					<div class="code">
@@ -159,7 +170,7 @@
 						</h3>
 						<code>
 <!-- Code begins -->
-<xmp><graphjs-comments max="20"></xmp>
+<xmp><graphjs-comments max="20" /></xmp>
 <!-- Code ends -->
 						</code>
 					</div>
@@ -179,7 +190,6 @@
 						<div class="slider" data-simple-slider>
 							<img src="assets/images/content/messages_introduction.png" />
 							<img src="assets/images/content/messages_mobile.png" />
-							<img src="assets/images/content/messages.png" />
 						</div>
 					</div>
 				</section>
