--- a/index.html
+++ b/index.html
@@ -54,36 +54,18 @@
 		<main>
 			<div class="container">
 				<section class="introduction">
-					<!--
 					<code class="major">
-
+<!-- Code begins -->
 <xmp><script src="pho.js"></script>
 <script>
-	//Initiate with your ID
-	Pho.init("16D58CF2-FD88-4A49-972B-6F60054B");
+  //Initiate with your ID
+  Pho.init("16D58CF2-FD88-4A49-972B-6F60054BF023");
 </script></xmp>
-
+<!-- Code ends -->
 					</code>
-					-->
-					<pre>
-						<code class="html">
-							<div>
-								<p>Is it working?</p>
-							</div>
-						</code>
-					</pre>
 					<button>Copy to Start</button>
 				</section>
 				<section class="information">
-					<div class="preview">
-						<div class="slider" data-simple-slider>
-							<img src="assets/images/content/auth-state_standalone.png" />
-							<img src="assets/images/content/auth-state_inline.png" />
-							<img src="assets/images/content/auth-register.png" />
-							<img src="assets/images/content/auth-login.png" />
-							<img src="assets/images/content/alert.png" />
-						</div>
-					</div>
 					<div class="code">
 						<h3>
 							Add login and logout
@@ -100,6 +82,15 @@
 <!-- Code ends -->
 						</code>
 					</div>
+					<div class="preview">
+						<div class="slider" data-simple-slider>
+							<img src="assets/images/content/auth-state_standalone.png" />
+							<img src="assets/images/content/auth-state_inline.png" />
+							<img src="assets/images/content/auth-register.png" />
+							<img src="assets/images/content/auth-login.png" />
+							<img src="assets/images/content/alert.png" />
+						</div>
+					</div>
 				</section>
 				<!-- GROUPS
 				<section class="information">
@@ -112,9 +103,9 @@
 						<code>
 
 <xmp><graphjs-group-members>
-	<graphjs-profile-card id="7346217961" />
-	<graphjs-profile-card id="8768732124" />
-	<graphjs-profile-card id="1236217836" />
+  <graphjs-profile-card id="7346217961" />
+  <graphjs-profile-card id="8768732124" />
+  <graphjs-profile-card id="1236217836" />
 </graphjs-group-members></xmp>
 
 						</code>
@@ -137,12 +128,12 @@
 						<code>
 <!-- Code begins -->
 <xmp><script>
-	Pho.setProfile(
-		'KarenMorgan',
-		'karenmorgan@geemail.com',
-		'I am a badass UX designer working in tech.',
-		'06/10/1990'
-	);
+  Pho.setProfile(
+    'KarenMorgan',
+    'karenmorgan@geemail.com',
+    'I am a badass UX designer working in tech.',
+    '06/10/1990'
+  );
 </script></xmp>
 <!-- Code ends -->
 						</code>
@@ -156,12 +147,6 @@
 					</div>
 				</section>
 				<section class="information">
-					<div class="preview">
-						<div class="slider" data-simple-slider>
-							<img src="assets/images/content/comments_introduction.png" />
-							<img src="assets/images/content/comments_inline.png" />
-						</div>
-					</div>
 					<div class="code">
 						<h3>
 							Add comment section
@@ -173,6 +158,12 @@
 <xmp><graphjs-comments max="20" /></xmp>
 <!-- Code ends -->
 						</code>
+					</div>
+					<div class="preview">
+						<div class="slider" data-simple-slider>
+							<img src="assets/images/content/comments_introduction.png" />
+							<img src="assets/images/content/comments_inline.png" />
+						</div>
 					</div>
 				</section>
 				<section class="information">
@@ -194,13 +185,6 @@
 					</div>
 				</section>
 				<section class="information">
-					<div class="preview">
-						<div class="slider" data-simple-slider>
-							<img src="assets/images/content/forum-list.png" />
-							<img src="assets/images/content/forum-thread.png" />
-							<img src="assets/images/content/forum-compose.png" />
-						</div>
-					</div>
 					<div class="code">
 						<h3>
 							Create a community forum!
@@ -210,6 +194,13 @@
 <xmp><graphjs-forum /></xmp>
 <!-- Code ends -->
 						</code>
+					</div>
+					<div class="preview">
+						<div class="slider" data-simple-slider>
+							<img src="assets/images/content/forum-list.png" />
+							<img src="assets/images/content/forum-thread.png" />
+							<img src="assets/images/content/forum-compose.png" />
+						</div>
 					</div>
 				</section>
 				<section class="information">
@@ -250,23 +241,23 @@
 <!-- Code begins -->
 <xmp class="active"><script src="pho.js"></script>
 <script>
-	//Initiate with your ID
-	Pho.init("26D58CF2-FD88-4A49-972B-6F60054B");
+  //Initiate with your ID
+  Pho.init("26D58CF2-FD88-4A49-972B-6F60054B");
 </script></xmp>
 <xmp><script src="pho.js"></script>
 <script>
-	//Initiate with your ID
-	Pho.init("36D58CF2-FD88-4A49-972B-6F60054B");
+  //Initiate with your ID
+  Pho.init("36D58CF2-FD88-4A49-972B-6F60054B");
 </script></xmp>
 <xmp><script src="pho.js"></script>
 <script>
-	//Initiate with your ID
-	Pho.init("46D58CF2-FD88-4A49-972B-6F60054B");
+  //Initiate with your ID
+  Pho.init("46D58CF2-FD88-4A49-972B-6F60054B");
 </script></xmp>
 <xmp><script src="pho.js"></script>
 <script>
-	//Initiate with your ID
-	Pho.init("56D58CF2-FD88-4A49-972B-6F60054B");
+  //Initiate with your ID
+  Pho.init("56D58CF2-FD88-4A49-972B-6F60054B");
 </script></xmp>
 <!-- Code ends -->
 						</div>
@@ -275,11 +266,13 @@
 			</div>
 		</main>
 		<section class="promotion">
-			<h2>Join our private beta!</h2>
-			<p>Leave your email to be a beta tester.</p>
-			<form>
-				<input type="text" placeholder="Your email address">
-			</form>
+			<div class="container">
+				<h2>Join our private beta!</h2>
+				<p>Leave your email to be a beta tester.</p>
+				<form>
+					<input type="text" placeholder="Your email address">
+				</form>
+			</div>
 		</section>
 		<section class="indication">
 			<div class="container">
@@ -305,7 +298,6 @@
 		<script src="https://rawgit.com/ruyadorno/simple-slider/master/dist/simpleslider.min.js"></script>
 		<script>
 			var sliders = document.getElementsByClassName('slider');
-			console.log(sliders);
 			for(i = 0; i < sliders.length; i++) {
 				simpleslider.getSlider({
 					container: sliders[i],
