--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 					<img class="logo" src="assets/images/identity/logo.svg">
 					<p>is proudly open source.</p>
 				</div>
-				<div class="note">
+				<div class="note" style="display:none;">
 					<img class="logo" src="assets/images/external/opensource-logo.svg">
 					<p>
 						Built on top of the robust Gaza Framework.
@@ -292,7 +292,7 @@
 		</section>
 		<footer>
 			<div class="container">
-				built with love by GROU.PS Inc.
+				built with love by <a href="http://www.groups-inc.com" target="_blank">GROU.PS Inc.</a>
 			</div>
 		</footer>
 		<script src="https://rawgit.com/ruyadorno/simple-slider/master/dist/simpleslider.min.js"></script>
