Handled whitespace more effectively

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div class="container">
 				<img class="hero" src="assets/images/illustrations/network.png" />
 				<h1>Make any website social</h1>
-				<p>with just a couple lines of code.</p>
+				<p>with just a few lines of code.</p>
 			</div>
 		</header>
 		<main>
@@ -63,7 +63,7 @@
 </script></xmp>
 <!-- Code ends -->
 					</code>
-					<button>Copy to Start</button>
+					<button>Start Yours</button>
 				</section>
 				<section class="information">
 					<div class="code">
