--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
 			<div class="container">
 				<h2>Join our private beta!</h2>
 				<p>Leave your email to be a beta tester.</p>
-				<form>
-					<input type="text" placeholder="Your email address">
+				<form action="https://formspree.io/business@groups-inc.com" method="POST">
+					<input type="text" name="_replyto" placeholder="Your email address">
 				</form>
 			</div>
 		</section>
