no need to start yours button

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </script></xmp>
 <!-- Code ends -->
 					</code>
-					<button>Start Yours</button>
+					<button style="display:none;">Start Yours</button>
 				</section>
 				<section class="information">
 					<div class="code">
