adding code styling

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							<br />
 							in single line of code!
 						</h3>
-						<code>
+						<pre class="prettyprint lang-html linenums">
 <!-- Code begins -->
 <xmp>//Login Box
 <graphjs-auth default="login" />
@@ -80,7 +80,7 @@
 //Authentication State
 <graphjs-state /></xmp>
 <!-- Code ends -->
-						</code>
+						</pre>
 					</div>
 					<div class="preview">
 						<div class="slider" data-simple-slider>
@@ -125,7 +125,7 @@
 						<h3>
 							Easily create profiles!
 						</h3>
-						<code>
+						<pre class="prettyprint lang-html linenums">
 <!-- Code begins -->
 <xmp><script>
   Pho.setProfile(
@@ -136,7 +136,7 @@
   );
 </script></xmp>
 <!-- Code ends -->
-						</code>
+						</pre>
 					</div>
 					<div class="preview">
 						<div class="slider" data-simple-slider>
@@ -153,11 +153,11 @@
 							<br />
 							to any page you want!
 						</h3>
-						<code>
+						<pre class="prettyprint lang-html linenums">
 <!-- Code begins -->
 <xmp><graphjs-comments max="20" /></xmp>
 <!-- Code ends -->
-						</code>
+						</pre>
 					</div>
 					<div class="preview">
 						<div class="slider" data-simple-slider>
@@ -171,11 +171,11 @@
 						<h3>
 							Add messaging between users!
 						</h3>
-						<code>
+						<pre class="prettyprint lang-html linenums">
 <!-- Code begins -->
 <xmp><graphjs-messages /></xmp>
 <!-- Code ends -->
-						</code>
+						</pre>
 					</div>
 					<div class="preview">
 						<div class="slider" data-simple-slider>
@@ -189,11 +189,11 @@
 						<h3>
 							Create a community forum!
 						</h3>
-						<code>
+						<pre class="prettyprint lang-html linenums">
 <!-- Code begins -->
 <xmp><graphjs-forum /></xmp>
 <!-- Code ends -->
-						</code>
+						</pre>
 					</div>
 					<div class="preview">
 						<div class="slider" data-simple-slider>
@@ -210,7 +210,7 @@
 							<br />
 							with user interaction.
 						</h3>
-						<code>
+						<pre class="prettyprint lang-html linenums">
 <!-- Code begins -->
 <xmp>//Buttons on any page
 <graphjs-bookmark-button />
@@ -219,7 +219,7 @@
 <graphjs-bookmark-list type="global" />
 </xmp>
 <!-- Code ends -->
-						</code>
+						</pre>
 					</div>
 					<div class="preview">
 						<div class="slider" data-simple-slider>
@@ -310,5 +310,6 @@
 				});
 			}
 		</script>
+		<script src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?lang=html&amp;skin=sons-of-obsidian"></script>
 	</body>
 </html>
