--- a/index.html
+++ b/index.html
@@ -249,6 +249,9 @@
 				<p>Leave your email to be a beta tester.</p>
 				<form action="https://formspree.io/business@groups-inc.com" method="POST">
 					<input type="text" name="_replyto" placeholder="Your email address">
+					<button type="submit">
+						<img src="assets/images/icons/send.svg" />
+					</button>
 				</form>
 			</div>
 		</section>
