Changed 'bookmark' to 'star' & Hosted images on Cloudinary to scale easily

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 					</div>
 					<div class="preview">
 						<div class="slider" data-simple-slider>
-							<img src="assets/images/content/auth-state_standalone.png" />
-							<img src="assets/images/content/auth-state_inline.png" />
-							<img src="assets/images/content/auth-register.png" />
-							<img src="assets/images/content/auth-login.png" />
-							<img src="assets/images/content/alert.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/auth-state_standalone.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/auth-state_inline.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/auth-register.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/auth-login.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/alert.png" />
 						</div>
 					</div>
 				</section>
@@ -112,9 +112,9 @@
 					</div>
 					<div class="preview">
 						<div class="slider" data-simple-slider>
-							<img src="assets/images/content/profile_introduction.png" />
-							<img src="assets/images/content/profile-card.png" />
-							<img src="assets/images/content/profile.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/profile_introduction.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/profile-card.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/profile.png" />
 						</div>
 					</div>
 				</section>
@@ -133,8 +133,8 @@
 					</div>
 					<div class="preview">
 						<div class="slider" data-simple-slider>
-							<img src="assets/images/content/comments_introduction.png" />
-							<img src="assets/images/content/comments_inline.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/comments_introduction.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/comments_inline.png" />
 						</div>
 					</div>
 				</section>
@@ -151,8 +151,8 @@
 					</div>
 					<div class="preview">
 						<div class="slider" data-simple-slider>
-							<img src="assets/images/content/messages_introduction.png" />
-							<img src="assets/images/content/messages_mobile.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/messages_introduction.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/messages_mobile.png" />
 						</div>
 					</div>
 				</section>
@@ -169,9 +169,9 @@
 					</div>
 					<div class="preview">
 						<div class="slider" data-simple-slider>
-							<img src="assets/images/content/forum-list.png" />
-							<img src="assets/images/content/forum-thread.png" />
-							<img src="assets/images/content/forum-compose.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/forum-list.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/forum-thread.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/forum-compose.png" />
 						</div>
 					</div>
 				</section>
@@ -185,18 +185,18 @@
 						<code>
 <!-- Code begins -->
 <pre class="prettyprint lang-html linenums"><xmp><!-- Buttons on any page -->
-<graphjs-bookmark-button />
+<graphjs-star-button type="love" />
 
 <!-- List favorite site content -->
-<graphjs-bookmark-list type="global" />
+<graphjs-star-list />
 </xmp></pre>
 <!-- Code ends -->
 						</code>
 					</div>
 					<div class="preview">
 						<div class="slider" data-simple-slider>
-							<img src="assets/images/content/bookmark-list_global-introduction.png" />
-							<img src="assets/images/content/bookmark-button.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/star-list_global-introduction.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/star-button.png" />
 						</div>
 					</div>
 				</section>
