Changed Cloudinary configuration

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		</nav>
 		<header>
 			<div class="container">
-				<img class="hero" src="assets/images/illustrations/network.png" />
+				<img class="hero" src="http://res.cloudinary.com/graphjs/image/upload/graphjs.com/illustrations/network.png" />
 				<h1>Make any website social</h1>
 				<p>with just a few lines of code.</p>
 			</div>
@@ -84,11 +84,11 @@
 					</div>
 					<div class="preview">
 						<div class="slider" data-simple-slider>
-							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/auth-state_standalone.png" />
-							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/auth-state_inline.png" />
-							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/auth-register.png" />
-							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/auth-login.png" />
-							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/alert.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,w_460/graphjs.com/content/auth-state_standalone.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,w_460/graphjs.com/content/auth-state_inline.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,w_460/graphjs.com/content/auth-register.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,w_460/graphjs.com/content/auth-login.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,w_460/graphjs.com/content/alert.png" />
 						</div>
 					</div>
 				</section>
@@ -113,9 +113,9 @@
 					</div>
 					<div class="preview">
 						<div class="slider" data-simple-slider>
-							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/profile_introduction.png" />
-							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/profile-card.png" />
-							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/profile.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,w_460/graphjs.com/content/profile_introduction.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,w_460/graphjs.com/content/profile-card.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,w_460/graphjs.com/content/profile.png" />
 						</div>
 					</div>
 				</section>
@@ -134,8 +134,8 @@
 					</div>
 					<div class="preview">
 						<div class="slider" data-simple-slider>
-							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/comments_introduction.png" />
-							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/comments_inline.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,w_460/graphjs.com/content/comments_introduction.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,w_460/graphjs.com/content/comments_inline.png" />
 						</div>
 					</div>
 				</section>
@@ -152,8 +152,8 @@
 					</div>
 					<div class="preview">
 						<div class="slider" data-simple-slider>
-							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/messages_introduction.png" />
-							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/messages_mobile.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,w_460/graphjs.com/content/messages_introduction.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,w_460/graphjs.com/content/messages_mobile.png" />
 						</div>
 					</div>
 				</section>
@@ -170,9 +170,9 @@
 					</div>
 					<div class="preview">
 						<div class="slider" data-simple-slider>
-							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/forum-list.png" />
-							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/forum-thread.png" />
-							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/forum-compose.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,w_460/graphjs.com/content/forum-list.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,w_460/graphjs.com/content/forum-thread.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,w_460/graphjs.com/content/forum-compose.png" />
 						</div>
 					</div>
 				</section>
@@ -196,8 +196,8 @@
 					</div>
 					<div class="preview">
 						<div class="slider" data-simple-slider>
-							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/star-list_global-introduction.png" />
-							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,q_80:420,w_460/graphjs.com/star-button.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,w_460/graphjs.com/content/star-list_global-introduction.png" />
+							<img src="http://res.cloudinary.com/graphjs/image/upload/c_scale,h_460,w_460/graphjs.com/content/star-button.png" />
 						</div>
 					</div>
 				</section>
