added links & text fixes

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 		<section class="promotion">
 			<div class="container">
 				<h2>Join our private beta!</h2>
-				<p>Leave your email to be a beta tester.</p>
+				<p>Leave your email to become a beta tester.</p>
 				<form action="https://formspree.io/business@groups-inc.com" method="POST">
 					<input type="text" name="_replyto" placeholder="Your email address">
 					<button type="submit">
@@ -265,7 +265,7 @@
 				<div class="note" style="display:none;">
 					<img class="logo" src="assets/images/external/opensource-logo.svg">
 					<p>
-						Built on top of the robust Gaza Framework.
+						Built on top of the robust <a href="http://phonetworks.org">Pho Framework</a>.
 						<br />
 						Feel free to export content and host it on your servers!
 					</p>
