--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 		</main>
 		<section class="promotion">
 			<div class="container">
-				<h2>Join our private beta!</h2>
+				<h2>Join our closed beta!</h2>
 				<p>Leave your email to become a beta tester.</p>
 				<form action="https://formspree.io/business@groups-inc.com" method="POST">
 					<input type="text" name="_replyto" placeholder="Your email address">
