--- a/index.html
+++ b/index.html
@@ -243,6 +243,8 @@
 					</code>
 				</section>
 			</div>
+			<p>&nbsp;</p>
+			<h3>&amp; check out our docs for the state of the art</h3>
 		</main>
 		<section class="promotion">
 			<div class="container">
