--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <pre class="prettyprint lang-html linenums"><xmp><script src="pho.js"></script>
 <script>
   //Initiate with your ID
-  Pho.init("16D58CF2-FD88-4A49-972B-6F60054BF023");
+  Pho.init("{{YOUR-UNIQUE-ID-GOES-HERE}}");
 </script></xmp></pre>
 <!-- Code ends -->
 					</code>
